# sqldap

./: pyproject.toml
sqldap/: sqldap.py
