[project]
name = "sqldap"
version = "0.1.0"
description = ""
authors = [
    {name = "hydr0nium",email = "37932436+hydr0nium@users.noreply.github.com"}
]
readme = "README.md"
packages = [
	{include = "sqldap"}
]
requires-python = ">=3.12"
dependencies = [
    "blessed (>=1.20.0,<2.0.0)"
]

[tool.poetry.scripts]
sqldap = "sqldap.sqldap:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
